// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarContainer /> renders avatar container correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
      "padding": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgba(103, 80, 164, 1)",
            "borderRadius": 100,
            "height": 200,
            "width": 200,
          },
          undefined,
        ]
      }
    >
      <Image
        accessibilityIgnoresInvertColors={true}
        source={1}
        style={
          {
            "borderRadius": 100,
            "height": 200,
            "width": 200,
          }
        }
        testID="avatar-image"
      />
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "System",
            "fontSize": 32,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 40,
          },
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Name
    </Text>
  </View>
</View>
`;

exports[`<DetailsContainer /> renders details container correctly 1`] = `
<View
  style={
    {
      "justifyContent": "space-evenly",
      "padding": 15,
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "margin": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 24,
          },
          {
            "marginHorizontal": 4,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon"
    >
      
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Key Features: 
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            {
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        Grey tabby and loves to sleep on his back
      </Text>
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "margin": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 24,
          },
          {
            "marginHorizontal": 4,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon"
    >
      
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Last Seen: 
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            {
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        Engineering, 19/05, 22:21 (31d ago)
      </Text>
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "margin": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 24,
          },
          {
            "marginHorizontal": 4,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon"
    >
      
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Last Fed: 
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            {
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        19/05, 20:01 (32d ago)
      </Text>
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "margin": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 24,
          },
          {
            "marginHorizontal": 4,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon"
    >
      
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Concern Status: 
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            {
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        Injured
      </Text>
    </Text>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
        {
          "margin": 8,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": undefined,
            "fontSize": 24,
          },
          {
            "marginHorizontal": 4,
          },
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
      testID="icon"
    >
      
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "flex": 1,
            "fontWeight": "bold",
          },
        ]
      }
    >
      Concerns: 
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            {
              "writingDirection": "ltr",
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        Seen limping, possibly right front leg injured
      </Text>
    </Text>
  </View>
</View>
`;

exports[`<KeyInfoContainer /> renders keyinfo container successfully 1`] = `
<View
  style={
    {
      "backgroundColor": "lightgrey",
      "flexDirection": "row",
      "justifyContent": "space-evenly",
      "padding": 15,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "fontWeight": "bold",
          },
        ]
      }
    >
      Gender
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      M
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "fontWeight": "bold",
          },
        ]
      }
    >
      Age
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      4y
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          {
            "fontWeight": "bold",
          },
        ]
      }
    >
      Sterilised
    </Text>
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Yes
    </Text>
  </View>
</View>
`;

exports[`<PhotosContainer /> renders photos container correctly 1`] = `
<View
  style={
    {
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "textAlign": "left",
          },
          {
            "color": "rgba(28, 27, 31, 1)",
            "fontFamily": "System",
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          {
            "writingDirection": "ltr",
          },
          undefined,
        ]
      }
    >
      Photos
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="view-button"
    >
      <View
        style={
          {
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(28, 27, 31, 1)",
                "fontFamily": "System",
                "fontWeight": "400",
                "letterSpacing": 0,
              },
              {
                "writingDirection": "ltr",
              },
              undefined,
            ]
          }
        >
          View All
        </Text>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": undefined,
                "fontSize": 12,
              },
              {
                "marginHorizontal": 4,
              },
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "backgroundColor": "rgba(202, 196, 208, 1)",
          "height": 0.5,
        },
        undefined,
        false,
        false,
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      testID="preview-photo"
    >
      <Image
        source={1}
        style={
          {
            "height": 171.5,
            "margin": 4,
            "resizeMode": "cover",
            "width": 171.5,
          }
        }
      />
    </View>
    <View
      testID="preview-photo"
    >
      <Image
        source={1}
        style={
          {
            "height": 171.5,
            "margin": 4,
            "resizeMode": "cover",
            "width": 171.5,
          }
        }
      />
    </View>
    <View
      testID="preview-photo"
    >
      <Image
        source={1}
        style={
          {
            "height": 171.5,
            "margin": 4,
            "resizeMode": "cover",
            "width": 171.5,
          }
        }
      />
    </View>
    <View
      testID="preview-photo"
    >
      <Image
        source={1}
        style={
          {
            "height": 171.5,
            "margin": 4,
            "resizeMode": "cover",
            "width": 171.5,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`<PreviewPhotos /> renders photos container correctly photoURLs.length < 4 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    testID="preview-photo"
  >
    <Image
      source={1}
      style={
        {
          "height": 171.5,
          "margin": 4,
          "resizeMode": "cover",
          "width": 171.5,
        }
      }
    />
  </View>
  <View
    testID="preview-photo"
  >
    <Image
      source={1}
      style={
        {
          "height": 171.5,
          "margin": 4,
          "resizeMode": "cover",
          "width": 171.5,
        }
      }
    />
  </View>
  <View
    testID="preview-photo"
  >
    <Image
      source={1}
      style={
        {
          "height": 171.5,
          "margin": 4,
          "resizeMode": "cover",
          "width": 171.5,
        }
      }
    />
  </View>
</View>
`;
